# realty_back

./: Dockerfile  License.txt  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: dev_deploy.yml  prod_deploy.yml
profiles/: models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
realty/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
realty_back/: asgi.py  settings.py  urls.py  wsgi.py
users/: backends.py  docker-compose.yaml  managers.py  models.py
welcome/: urls.py  views.py
